--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
-    "prettier": "2.3.2"
-  },
-  "dependencies": {
+    "prettier": "2.3.2",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-jest": "^27.0.6"
+  },
+  "dependencies": {
+    
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
